3.2.0
  - add a 'testing' artifact with a JdbiRule for JUnit tests

3.1.1
  - Improve IBM JDK compatibility with default methods
  - Allow non-public SqlObject types!!!
  - Fix some ThreadLocal and StringTemplate leaks

3.1.0
  - The strict transaction handling check in Handle.close() may be disabled via
    getConfig(Handles.class).setForceEndTransactions(false).
  - StringTemplate SQL locator supports StringTemplate groups importing from other groups.
  - New RowReducer interface and related APIs make it simple to reduce master-detail joins
    into a series of master objects with the detail objects attached. See:
    - RowReducer interface
    - LinkedHashMapRowReducer abstract implementation for 90% of cases
    - ResultBearing.reduceRows(RowReducer)
    - @UseRowReducer SQL Object annotation
  - Fixed bug in PreparedBatch preventing batches from being reusable.
  - Additional Kotlin convenience methods to avoid adding ".java" on every Kotlin type:
    - Jdbi.withExtension(KClass, ExtensionCallback)
    - Jdbi.useExtension(KClass, ExtensionConsumer)
    - Jdbi.withExtensionUnchecked(KClass, callback)
    - Jdbi.useExtensionUnchecked(KClass, callback)
  - EnumMapper tries a case insensitive match if there's no exact match
  - OracleReturning.returningDml() supports named parameters
  - Fixed regression in Postgres typed enum mapper, which caused a fallback on the
    Jdbi default enum mapper.

3.0.1
  - Kotlin mapper support for @Nested annotation
  - ReflectionMapperUtil utility class made public.
  - collectInto() and SQL Object return type support for OptionalInt, OptionalLong,
    and OptionalDouble, and Vavr Option.
  - New jdbi3-sqlite plugin with SQLite-specific binding and column mapping for java.net.URL.
  - Workaround for multithreaded race condition loading StringTemplate STGroups and templates.
  - Column mapper for Vavr Option.

3.0.0
  - [breaking] Added ConfigRegistry parameter to SqlLocator.locate() method.

3.0.0-rc2