@@ -23,13 +23,14 @@ import org.jdbi.v3.core.internal.SqlScriptParser;
 /**
  * Represents a number of SQL statements which will be executed in a batch statement.
  */
-public class Script
+public class Script extends SqlStatement<Script>
 {
     private final Handle handle;
     private final String sql;
 
     public Script(Handle h, String sql)
     {
+        super(h, sql);
         this.handle = h;
         this.sql = sql;
     }
@@ -60,7 +61,7 @@ public class Script
      * @return the split statements
      */
     public List<String> getStatements() {
-        return splitToStatements(sql);
+        return splitToStatements(getConfig(SqlStatements.class).getTemplateEngine().render(sql, getContext()));
     }
 
     private List<String> splitToStatements(String script) {
