@@ -1,5 +1,6 @@
 3.2.0
   - add a 'testing' artifact with a JdbiRule for JUnit tests
+  - @SqlScript to execute multiple statements
 
 3.1.1
   - Improve IBM JDK compatibility with default methods
